bug fixes
printing multip-le recipes, modal too small on mobile

--- a/style/custom.css
+++ b/style/custom.css
@@ -404,6 +404,18 @@ body{
 		margin-left: 0;
 		margin: auto;
 	}
+  /* Modal Content/Box */
+.modal-content {
+  width: 90%; 
+}
+
+.modal-content-recipe {
+  background-color: #fefefe;
+  margin: 5px auto; 
+  border: 1px solid #888;
+  width: 80%; 
+}
+
   .panel-head-wrapper h2{font-size: 16px;}
 } 
 
